err/digtokenizer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/digSparkUtil'...
Compiling './lib/python3.5/site-packages/digSparkUtil/ESUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/ESUtil.py", line 16
    print jsonObj
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/convertToSeq.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/convertToSeq.py", line 17
    print "Got options:", c_options
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/fileUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/fileUtil.py", line 180
    rdd_json = rdd.map(lambda (k, v): FileUtil.__dump_as_json(k, v, separator))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digSparkUtil/hbase_manager.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/hbase_manager.py", line 20
    print self.hbase_conf
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/jsonUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/jsonUtil.py", line 166
    print list(JSONUtil.extract_values_from_path(jsonObj1, "assignee.assignee"))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digSparkUtil/seq2tsv.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/seq2tsv.py", line 12
    print 'usage: seq2tsv <filename>'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/testESUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/testESUtil.py", line 4
    print "### NO PYSPARK"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/digSparkUtil-1.0.23.egg-info'...
Listing './lib/python3.5/site-packages/digTokenizer'...
Listing './lib/python3.5/site-packages/digTokenizer/inputParser'...
Listing './lib/python3.5/site-packages/digTokenizer/ngram'...
Compiling './lib/python3.5/site-packages/digTokenizer/rowTokenizer.py'...
***   File "./lib/python3.5/site-packages/digTokenizer/rowTokenizer.py", line 146
    if '\u' in word:
      ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 0-1: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/digTokenizer-1.0.13.egg-info'...
Listing './lib/python3.5/site-packages/nose2'...
Listing './lib/python3.5/site-packages/nose2/plugins'...
Listing './lib/python3.5/site-packages/nose2/plugins/loader'...
Listing './lib/python3.5/site-packages/nose2/tests'...
Listing './lib/python3.5/site-packages/nose2/tests/functional'...
Listing './lib/python3.5/site-packages/nose2/tests/unit'...
Listing './lib/python3.5/site-packages/nose2/tools'...
Listing './lib/python3.5/site-packages/nose2-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
